# Fipster

./: .gitignore  Example_recording.m  FIP part list.xlsx  FIP_acquisition.m  FIP_signal.m  README.md  automated_workflow.m  calibrationgui.m  event_detection.m  mean_bleaching_raw.mat  sweepset.m
Arduino_Code/: FIP_acquisition.ino
Fipster_Matlab (legacy)/: README.md  automated_workflow.asv  automated_workflow.m  mean_bleaching.mat
Fipster_python/: Example_Analysis.ipynb  FIP_example.py  Fipster.py  README.md  example_data.csv  pyproject.toml
Fipster_python/src/fipster/: __init__.py  cli.py  core.py
Fipster_python/tests/: conftest.py  test_imports.py  test_signal_processing.py  test_timestamps.py
raw_data/: example_1.mat  example_2.mat
